@@ -1,5 +1,9 @@
 2004-11-04 Derek Price <derek@ximbiot.com>
 
+	* sanity.sh: s/depends_on_/require/.
+
+2004-11-04 Derek Price <derek@ximbiot.com>
+
 	* sanity.sh (find_tool): Eliminate variable with single reference.
 
 2004-11-04  Mark D. Baushke  <mdb@juniper.net>
